text prevented from overflowing

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h2{
 }
 .container{
   width:350px;
-  height:600px;
+  height:550px;
   background-color: #C0C0C0;
   margin-top: 10px;
   box-shadow: 5px 5px 5px 5px #696969;
@@ -65,6 +65,7 @@ h2{
   height: 40px;
   background-color: #696969;
   margin-top: 5px;
+  overflow: hidden;
 }
 
 .grid{
